--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <modelVersion>4.0.0</modelVersion>
   <groupId>fr.iutblagnac</groupId>
-  <artifactId>tp_qualite</artifactId>
+  <artifactId>finannee</artifactId>
   <version>1.0</version>
   <packaging>jar</packaging>
     <properties>
@@ -28,7 +28,7 @@
         <configuration>
           <archive>
             <manifest>
-              <mainClass>HelloJava</mainClass>
+              <mainClass>findannee</mainClass>
             </manifest>
           </archive>
         </configuration>
